# platform

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PHASE1_IMPLEMENTATION.md  README.md  README.md~  SUBMODULES.md  WORKSPACE_BOUNDARY_IMPLEMENTATION.md  WORKTREES.md  book.toml  next.actions
.agents/skills/clearhead/: SKILL.md
.claude/skills/: clearhead
.claude/skills/verify/: SKILL.md
.clearhead/: .gitignore  README.md  archive.ttl  config.json  lsp.open.ttl  next.actions  next.completed.actions  next.completed.open.ttl  observability.md  observability.open.ttl  parse-boundary.actions  templates.actions  templates.md  workspace.json
.clearhead/archive/: .identity.json  .lsp-decoupling.json  graphd.completed.actions  graphd.md  lsp-decoupling.actions  lsp-decoupling.completed.actions  workspace-durability.completed.actions  workspace-durability.md
.clearhead/charters/: .charters.json  .graphd.json  .lsp-workspace-refactor.json  .lsp.json  .next.json  .templates.json  .workspace-durability.json  .workspace-vocabulary.json  README.md  charters.completed.actions  graphd.actions  graphd.completed.actions  graphd.md  identity.actions  identity.completed.actions  identity.md  lsp-decoupling.actions  lsp-decoupling.md  lsp-workspace-refactor.actions  lsp-workspace-refactor.completed.actions  lsp-workspace-refactor.md  lsp.actions  lsp.completed.actions  next.actions  next.completed.actions  observability.actions  observability.completed.actions  observability.md  parse-boundary.actions  parse-boundary.md  platform.completed.actions  templates.actions  templates.completed.actions  templates.md  workspace-durability.actions  workspace-durability.md  workspace-vocabulary.actions  workspace-vocabulary.md
.clearhead/objectives/: calendar-view.md  capture-workflow.md  data-integration.md  query-interace.md  query-interface.md  strong-CI-CD.md
.github/: CLOUDFLARE_SETUP.md  README.md
.github/workflows/: deploy-vocab.yml
.wrangler/cache/: wrangler-account.json
Plans/: calendar_integration.md  export_refactor.md  planned_act_storage.md
clearhead-graphd/: Cargo.toml  README.md
clearhead-graphd/docs/: jsonld_export_contract.md
clearhead-graphd/src/: lib.rs  main.rs
clearhead-graphd/src/graph/: insert.rs  jsonld.rs  mod.rs  query.rs  serialize.rs  shape.rs
clearhead-graphd/src/resources/: actions.context.v4.json  actions.schema.v4.json  ontology-out.example.v4.jsonld
clearhead-graphd/tests/: graph_queries.rs
clearhead-lsp/: Cargo.toml  README.md
clearhead-lsp/.clearhead/: workspace.json
clearhead-lsp/src/: handlers.rs  lib.rs  main.rs  providers.rs  telemetry.rs
clearhead-lsp/tests/: stdio_protocol.rs
scripts/: startup  worktree-done  worktree-new
src/: AUDIENCE.md  README.md  SUMMARY.md
(+76 files in other folders)
