[package]
name = "clearhead-graphd"
version = "0.1.0"
edition = "2024"
description = "Standalone graph/query binary for ClearHead"
license = "MIT"

[[bin]]
name = "clearhead-graphd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
clearhead_core = { path = "../clearhead-core", version = "0.2.0" }
oxigraph = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1.44"
uuid = "1.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
chrono = "0.4"
jsonschema = "0.18"
