[package]
name = "clearhead-lsp"
version = "0.1.0"
authors = ["Darrion Burgess <darrionburgess@gmail.com>"]
edition = "2024"
description = "Standalone Language Server Protocol runtime for ClearHead"
license = "MIT"
repository = "https://github.com/ClearHeadToDo-Devs/clearhead-lsp.git"

[[bin]]
name = "clearhead-lsp"
path = "src/main.rs"

[dependencies]
clearhead_core = { path = "../clearhead-core", version = "0.2.0" }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
dirs = "6.0.0"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp-server = "0.23.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.3"
tree-sitter-actions = { path = "../tree-sitter-actions", version = "0.9.2" }
uuid = "1.0"

[dev-dependencies]
tempfile = "3.8"
